Fix for thirdRow line on mobile.

--- a/mobile.css
+++ b/mobile.css
@@ -19,7 +19,7 @@
   }
 
   #thirdRow {
-    height: 150px;
+    height: 19vh;
     overflow: hidden;
     margin: 2px;
   }
